2019-10-11  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/decl.c (gnat_to_gnu_entity) <E_Named_{Integer|Real}>:
	New case to deal with the definition of named numbers.
	<E_Variable>: Minor tweaks.  Set DECL_IGNORED_P on the CONST_DECL
	if a corresponding variable is built.
	* gcc-interface/trans.c (gnat_to_gnu) <N_Integer_Literal>: Return
	error_mark_node instead of aborting on overflow for named numbers.
	<N_Number_Declaration>: Reuse the <N_Object_Declaration> case and
	deal with error_mark_node specifically.
	* gcc-interface/utils.c (create_var_decl): Do not set DECL_IGNORED_P
	on CONST_DECLs.
	(gnat_write_global_declarations): Output global constants.

2019-10-10  Gary Dismukes  <dismukes@adacore.com>

	* exp_ch7.adb (Check_Unnesting_In_Decls_Or_Stmts): When
	encountering a loop at the top level of a package declaration
	list (that is, within the declarations of a package spec or
	body) that has nested subprograms, call Unnest_Loop to create a
	new library-level procedure that will contain the loop, to allow
	for proper handling of up-level references from within nested
	subprograms, such as to loop parameters.
	(Unnest_Loop): New procedure that takes a loop statement and
	creates a new procedure body to enclose the loop statement,
	along with generating a call to the procedure.

2019-10-10  Arnaud Charlet  <charlet@adacore.com>

	* freeze.adb (Freeze_Subprogram): Ensure constructor is a C++
	constructor.

2019-10-10  Gary Dismukes  <dismukes@adacore.com>

	* libgnat/a-ststio.ads (File_Type): Apply pragma
	Preelaborable_Initialization to the type.

2019-10-10  Yannick Moy  <moy@adacore.com>

	* inline.adb (Can_Be_Inlined_In_GNATprove_Mode): Do not peek
	under private types whose completion is SPARK_Mode Off.

2019-10-10  Gary Dismukes  <dismukes@adacore.com>

	* exp_ch4.adb, sem_cat.adb, sem_ch12.adb, sem_ch3.adb,
	sem_ch6.adb, sem_prag.adb, sem_util.adb, sem_util.ads: Minor
	typo fixes.

2019-10-10  Ed Schonberg  <schonberg@adacore.com>
