@@ -1,0 +1,8 @@
+package body Array38_Pkg is
+
+   function F (Data : Array_Type) return Value_Type is
+   begin
+      return Value_Type'First;
+   end;
+
+end Array38_Pkg;
