@@ -1,5 +1,10 @@
 2019-10-11  Eric Botcazou  <ebotcazou@adacore.com>
 
+	* gcc-interface/decl.c (Gigi_Equivalent_Type) <E_Array_Subtype>: New
+	case.  Return the base type if the subtype is not constrained.
+
+2019-10-11  Eric Botcazou  <ebotcazou@adacore.com>
+
 	* gcc-interface/decl.c (gnat_to_gnu_entity) <E_Named_{Integer|Real}>:
 	New case to deal with the definition of named numbers.
 	<E_Variable>: Minor tweaks.  Set DECL_IGNORED_P on the CONST_DECL
